# large_scale_drawing

./: CMakeLists.txt  README.md  drawing.config  drawing_manager.cpp  package.xml
data/bag/: README.md  drawing.bag  drawing_save_0629_2.bag  drawing_traj_save_0629.txt  drawing_traj_save_0629_2.txt  plot_traj.py  read_bag.cpp  time_stamp.txt
data/config/: README.md  bee_hive_anipaint.config  bee_hive_dogs.config  bee_hive_ewha.config  bee_hive_farm.config  bee_hive_gyeongbokgung.config  bee_hive_horses.config  bee_hive_paris.config  bee_hive_prague.config  circular_dogs.config  curve_dogs.config  curve_paris.config  half_sphere_grid.config
data/demo/: bee_hive_three_traj.txt  curve_traj.txt  farm_bee_hive_three_k_demo.txt  grid_half_sphere_k.txt  grid_half_sphere_k_demo.txt  half_sphere_grid_6.txt  half_sphere_grid_7.txt  half_sphere_grid_8.txt  heart_path_bee_hive_three_c_demo.txt  heart_path_bee_hive_three_k_demo.txt  heart_path_bee_hive_three_m_demo.txt  heart_path_bee_hive_three_y_demo.txt  hello_world_path_bee_hive_three_k_demo.txt  paris_bee_hive_three_k_demo.txt  paris_curve_k_demo.txt  prague_bee_hive_three_k_demo.txt
data/demo/anipaint/: anipaint_strokes_bee_hive_three_0_demo.txt  anipaint_strokes_bee_hive_three_1_demo.txt  anipaint_strokes_bee_hive_three_2_demo.txt  anipaint_strokes_bee_hive_three_3_demo.txt
data/demo/dogs/: dogs_bee_hive_three_k_demo.txt  dogs_bee_hive_three_r_demo.txt  dogs_bee_hive_three_y_demo.txt
data/demo/ewha/: ewha_full_path_bee_hive_three_c_demo.txt  ewha_full_path_bee_hive_three_k_demo.txt  ewha_full_path_bee_hive_three_m_demo.txt  ewha_full_path_bee_hive_three_y_demo.txt
data/demo/gyeongbokgung/: gyeongbokgung_path_bee_hive_three_c_demo.txt  gyeongbokgung_path_bee_hive_three_k_demo.txt  gyeongbokgung_path_bee_hive_three_m_demo.txt  gyeongbokgung_path_bee_hive_three_y_demo.txt
data/input/: New_Project_path_k.txt  README.md  ewha__path_c.txt  ewha__path_k.txt  ewha__path_m.txt  ewha__path_y.txt  farm_k.txt  grid_k.txt  heart_path_c.txt  heart_path_k.txt  heart_path_m.txt  hello_world_path_k.txt  horses_k.txt  paris_k.txt  prague_k.txt  tsp_path_k.txt
data/input/anipaint/: anipaint_strokes_0.txt  anipaint_strokes_1.txt  anipaint_strokes_2.txt  anipaint_strokes_3.txt
data/input/dogs/: dogs_k.txt  dogs_r.txt  dogs_y.txt
data/input/ewha/: ewha_full_path_c.txt  ewha_full_path_k.txt  ewha_full_path_m.txt
data/input/gyeongbokgung/: gyeongbokgung_log.txt  gyeongbokgung_path_c.txt  gyeongbokgung_path_k.txt  gyeongbokgung_path_m.txt  gyeongbokgung_path_y.txt
data/input/university/: university_full_path_c.txt  university_full_path_k.txt
data/input/womans/: womans_full_path_c.txt  womans_full_path_y.txt
doc/: communication_pipeline.md
iiwa/include/: KDTree.hpp  drawing_iiwa.h  drawing_input copy.h  drawing_input.h  drawing_input_org.h  drawing_input_range.h  drawing_input_vis.h  drawing_moveit.h  line_publisher.h  marker_publisher.h
iiwa/launch/: drawing.launch  drawing_manager.launch  prep_drawing_moveit.launch  prep_drawing_paris.launch  prep_drawing_tracker.launch
iiwa/src/: KDTree.cpp  drawing_iiwa.cpp  drawing_input copy.cpp  drawing_input.cpp  drawing_input_org.cpp  drawing_input_range.cpp  drawing_input_vis.cpp  manager_moving.cpp  manager_not_moving.cpp  manager_not_moving_spline.cpp  marker_publisher.cpp
iiwa/src/moveit/: drawing_moveit.cpp  drawing_moveit_org.cpp  drawing_moveit_vis.cpp  line_publisher.cpp
input/: README.md  heart_path_y.txt  quat1_k.txt
input/ewha/: ewha_full_path_y.txt
input/university/: university_full_path_m.txt  university_full_path_y.txt
input/womans/: womans_full_path_k.txt  womans_full_path_m.txt
manager/include/: drawing_manager.h  marker_publisher.h
manager/src/: drawing_manager.cpp  marker_publisher.cpp  marker_publisher_tracker.cpp  tf_publisher.py
ridgeback/launch/: ridgeback.launch  vive_tracker.launch
ridgeback/src/: cmd_vel_to_fixed_goal.py  communication_trajectory.py  laser_scan_align.py  laser_scan_align_right.py  laser_scan_basic.py  move_odom.py  move_odom_tf.py  odom_movement_detector.py  odom_publisher.py  plot_vive_realtime_both.py  real_world.py  realworld_trajectory_communication.py  ridgeback.py  ridgeback1.py  ridgeback_tracker.py  tf_publisher.py  tools.py  tools_cmd_vel.py  trajectory_script_algorithm.py  trajectory_script_algorithm1.py  vive_tracker_calibration.py
