<package>
  <name>large_scale_drawing</name>
  <version>0.0.0</version>
  <description>Large-scale robotic drawing using Ridgeback and iiwa</description>
  <author email="daeun7250@gmail.com">Daeun Song</author>
  <maintainer email="daeun7250@gmail.com">Daeun Song</maintainer>

  <license>BSD</license>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_visual_tools</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <build_depend>iiwa_ros</build_depend>
  <run_depend>iiwa_ros</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
